# Kernel_Optimazation

./: .gitignore  CMakeLists.txt  README.md
gemv/: CMakeLists.txt  README.md  project-intro.md
gemv/include/: gemv_common.h
gemv/project-proof/: README.md
gemv/project-proof/data/: benchmark_results.csv
gemv/project-proof/docs/: why-each-version-changed.md
gemv/project-proof/docs/figures/: README.md
gemv/project-proof/scripts/: plot_correctness.py  plot_latency.py  plot_latency_log.py  plot_ncu_summary.py  plot_speedup.py  profile_ncu.sh
gemv/src/: gemv_baseline.cu  gemv_v0.cu  gemv_v1.cu  gemv_v2.cu  gemv_v3.cu  gemv_v4.cu  main.cu
int8-quantize/: CMakeLists.txt  README.md  project-intro.md
int8-quantize/include/: quantize_common.h
int8-quantize/project-proof/: README.md
int8-quantize/project-proof/data/: benchmark_results.csv
int8-quantize/project-proof/docs/: why-each-version-changed.md
int8-quantize/project-proof/scripts/: plot_correctness.py  plot_latency.py  plot_latency_log.py  plot_ncu_summary.py  plot_speedup.py  profile_ncu.sh
int8-quantize/src/: main.cu  quantize_baseline.cu  quantize_v0.cu  quantize_v1.cu  quantize_v2.cu  quantize_v3.cu  quantize_v4.cu
softmax/: CMakeLists.txt  README.md  project-intro.md
softmax/include/: softmax_common.h
softmax/project-proof/: README.md
softmax/project-proof/data/: benchmark_results.csv
softmax/project-proof/docs/: why-each-version-changed.md
softmax/project-proof/scripts/: plot_correctness.py  plot_latency.py  plot_latency_log.py  plot_ncu_summary.py  plot_speedup.py  profile_ncu.sh
softmax/src/: main.cu  softmax_baseline.cu  softmax_v0.cu  softmax_v1.cu  softmax_v2.cu  softmax_v3.cu  softmax_v4.cu
(+96 files in other folders)
